--- a/css/notify-tc.css
+++ b/css/notify-tc.css
@@ -1,37 +1,28 @@
 .alert-notify{
-    padding-left: 20px;
-    padding-right: 20px;
+    top: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
     position: absolute;
     opacity: 0;
     right: 0px;
-    font-family: Arial, Helvetica Neue;
+    font-family: Roboto,Arial, Helvetica Neue;
     text-align: center;
     color: white;
     width: 0px;
-    height: 200px;
+    height: 100px;
 }
 
 .alert-notify #title{
-    margin-top: 15px;
-    font-size: 30px;
-}
-
-.alert-notify #content{
+    margin-top: 20px;
     font-size: 20px;
 }
 
 .correct-notify{
-    border-top: 4px solid green;
-    min-width: 30px;
-    min-height: 100px;
-    border-radius: 0 0 7px 7px;
-    background-color: rgba(0, 0, 0, 0.6);
+    border-top: 6px solid #2ca737;
+    background-color: #3c3c3b;
 }
 
 .incorrect-notify{
-    border-top: 4px solid red;
-    min-width: 30px;
-    min-height: 100px;
-    border-radius: 0 0 7px 7px;
-    background-color: rgba(0, 0, 0, 0.8);
+    border-top: 6px solid #f00;
+    background-color: #3c3c3b;
 }
