--- a/css/notify-tc.css
+++ b/css/notify-tc.css
@@ -1,20 +1,26 @@
 .alert-notify{
-    top: 100px;
-    padding-left: 10px;
-    padding-right: 10px;
-    position: absolute;
-    opacity: 0;
-    right: 0px;
-    font-family: Roboto,Arial, Helvetica Neue;
+    position: fixed;/*Position */
+
     text-align: center;
+
+    /*intial position*/
+    top: 10vh;
+    right: 0px;
+    padding: 0px 10px 0px 10px;
+    opacity: 0;
+
     color: white;
+
     width: 0px;
     height: 100px;
+
+    font-family: Roboto,Arial, Helvetica Neue;
 }
 
 .alert-notify #title{
-    margin-top: 20px;
     font-size: 20px;
+    font-weight: bold;
+    height: 100%;
 }
 
 .correct-notify{
