--- a/css/notify-tc.css
+++ b/css/notify-tc.css
@@ -1,26 +1,23 @@
 .alert-notify{
-    position: fixed;/*Position */
-
-    text-align: center;
-
-    /*intial position*/
-    top: 10vh;
-    right: 0px;
-    padding: 0px 10px 0px 10px;
+    top: 100px;
+    z-index: 100000;
+    padding-left: 10px;
+    padding-right: 10px;
+    position: absolute;
     opacity: 0;
-
-    color: white;
-
-    width: 0px;
-    height: 100px;
-
     font-family: Roboto,Arial, Helvetica Neue;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    width: 0px;
+    height: 0px;
+    right: 0px;
 }
 
 .alert-notify #title{
-    font-size: 20px;
-    font-weight: bold;
-    height: 100%;
+    /*margin-top: 20px;*/
+    font-size: 23px;
+    font-weight: 900;
 }
 
 .correct-notify{
@@ -30,5 +27,10 @@
 
 .incorrect-notify{
     border-top: 6px solid #f00;
+    background-color: #3c3c3b;
+}
+
+.log-notify{
+    border-top: 6px solid #f69600;
     background-color: #3c3c3b;
 }
